added stacy and c2bk projects to the list added Google Analytics stuff

--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@ title: Andrew Kraut
     
   <h1>GitHub Projects</h1>
   <ul class="posts">
-    <li><a href="http://github.com/opei4624/bitly.py/">bitly.py:</a> A Python API interface to <a href="http://bit.ly/">bit.ly</a>.</li>
-    <li><a href="https://github.com/opie4624/pypingfm/">pypingfm:</a> A Python API interface to <a href="http://ping.fm/">Ping.fm</a>.</li>
-    <li><a href="https://github.com/opie4624/pyrss2twitter/">pyrss2twitter:</a> A Python script to post RSS feed items to a <a href="http://twitter.com/">Twitter</a> account.</li>
+    <li><a href="http://github.com/opie4624/bitly.py/">bitly.py</a>: A Python API interface to <a href="http://bit.ly/">bit.ly</a>.</li>
+    <li><a href="https://github.com/opie4624/pypingfm/">pypingfm</a>: A Python API interface to <a href="http://ping.fm/">Ping.fm</a>.</li>
+    <li><a href="https://github.com/opie4624/pyrss2twitter/">pyrss2twitter</a>: A Python script to post RSS feed items to a <a href="http://twitter.com/">Twitter</a> account.</li>
+    <li><a href="http://opie4624.github.com/c2bk/">c2bk</a>: an online game management interface for Cruel 2 B Kind.</li>
+    <li><a href="http://opie4624.github.com/stacy/">stacy</a>: a two-part port scanner/firewalking tool</li>
   </ul>
 </div>
   
+    <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+  try {
+  var pageTracker = _gat._getTracker("UA-12403750-1");
+  pageTracker._trackPageview();
+  } catch(err) {}</script>
