--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Andrew Kraut
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a> <small><a class="comment_count" href="{{ post.url }}#disqus_thread">Comments</a></small></li>
     {% endfor %}
   </ul>
     
@@ -20,13 +20,3 @@ title: Andrew Kraut
     <li><a href="http://opie4624.github.com/stacy/">stacy</a>: a two-part port scanner/firewalking tool</li>
   </ul>
 </div>
-  
-    <script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-  <script type="text/javascript">
-  try {
-  var pageTracker = _gat._getTracker("UA-12403750-1");
-  pageTracker._trackPageview();
-  } catch(err) {}</script>
