added a Disqus widget to the front page.

--- a/index.html
+++ b/index.html
@@ -20,3 +20,5 @@ title: Andrew Kraut
     <li><a href="http://opie4624.github.com/stacy/">stacy</a>: a two-part port scanner/firewalking tool</li>
   </ul>
 </div>
+
+<script type="text/javascript" src="http://disqus.com/forums/opie4624github/combination_widget.js?num_items=5&hide_mods=0&color=grey&default_tab=recent&excerpt_length=200"></script><a href="http://disqus.com/">Powered by Disqus</a>
