added static pages from my website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@ title: Andrew Kraut
 ---
 
 <div id="home">
+  <h1>Pages</h1>
+  <ul class="posts">
+    <li><a href="about-me.html">About Me</a></li>
+    <li><a href="wii-friend-codes.html">Wii Friend Codes</a></li>
+    <li><a href="people-i-know.html">People I Know</a></li>
+  </ul>
+  
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
