--- a/_posts/posterous/2011-04-23-on-living-in-the-future-and-the-benefits-thereof.html
+++ b/_posts/posterous/2011-04-23-on-living-in-the-future-and-the-benefits-thereof.html
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "On Living in the Future and the Benefits Thereof"
+title: "On Living in the Future"
+subtitle: "and the Benefits Thereof"
 description: ""
 category: 
 tags: []
